# NyanCode

./: Cargo.toml
core/: Cargo.toml
core/src/: events.rs  lib.rs
core/src/api/: anthropic.rs
src/: api.rs  config.rs  main.rs  schema.rs  tools.rs  ui.rs
src/api/: anthropic.rs
tui/: Cargo.toml
tui/src/: main.rs
