[package]
name = "nyan-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
regex = "1"
glob = "0.3"
walkdir = "2"
termcolor = "1"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"

[lints.clippy]
pedantic = "deny"

module_name_repetitions = "deny"
missing_errors_doc = "deny"
must_use_candidate = "deny"
mod_module_files = "deny"

indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
